# Xbft

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ChangeLog.md  LICENSE  README.md
cmake/: 3rd.cmake  clang-tidy.cmake  proto.cmake
docs/: 3rd-install.md  C++编码规范.md  Hotstuff共识算法.md  Xbft使用示例.md  Xbft接口文档.md  Xbft设计文档.md  clang-tidy.md  code-style-format.md  git-commit-msg-format.md  koroFileHeader-format.md
include/: ConsEngine.h  Xbft.h
include/utils/: Logger.h  Sha256.h  Timer.h  Timestamp.h
lib/: CMakeLists.txt
lib/crypto/: CMakeLists.txt  Sha256.cpp  Sha256.h
lib/engine/: CMakeLists.txt  Xbft.cpp  XbftConsensus.cpp  XbftConsensus.h  XbftEngine.cpp  XbftEngine.h  XbftLiveness.cpp  XbftLiveness.h  XbftMsg.cpp  XbftMsg.h  XbftNode.cpp  XbftNode.h  XbftNodeTree.cpp  XbftNodeTree.h  XbftNvInstance.cpp  XbftNvInstance.h  XbftQc.cpp  XbftQc.h  XbftTc.cpp  XbftTc.h  XbftValidatorSet.cpp  XbftValidatorSet.h
lib/protos/: CMakeLists.txt  consensus.proto
lib/utils/: CMakeLists.txt  FunctionWraper.h  Logger.cpp  Logger.h  Sha256.cpp  Strings.h  Timestamp.cpp
script/: .clang-format  ClangFormat.py  Client.py  CountCountlines.sh  GenProto.py  ReportCoverage.sh
test/sample/: CMakeLists.txt  main.cpp
test/sample/common/: Common.h  Configure.cpp  Configure.h  Ed25519.cpp  Ed25519.h  EventQueue.h  ExitHandler.h  Random.cpp  Random.h  Singleton.h  Strings.h  ThreadPool.cpp  ThreadPool.h
test/sample/config/: config.yaml  config0.yaml  config1.yaml  config2.yaml  config3.yaml
test/sample/dealing/: BlockChain.cpp  BlockChain.h  ConsensusValue.cpp  ConsensusValue.h  NodeInfo.cpp  NodeInfo.h  StoreValue.cpp  StoreValue.h  Sync.cpp  Sync.h
test/sample/net/: Network.cpp  Network.h
test/sample/proto/: CMakeLists.txt  chain.proto
test/sample/protos/: chain.proto
test/unittest/: CMakeLists.txt  main.cpp
test/unittest/crypto/: Sha256Test.cpp
test/unittest/engine/: Tool.cpp  Tool.h  XbftConsensusTest.cpp  XbftConsensusTest.h  XbftEngineTest.cpp  XbftEngineTest.h  XbftLivenessTest.cpp  XbftLivenessTest.h  XbftMsgTest.cpp  XbftMsgTest.h  XbftNodeTreeTest.cpp  XbftNodeTreeTest.h  XbftTcTest.cpp  XbftTcTest.h  XbftTest.cpp  XbftTest.h  XbftValidatorSetTest.cpp  XbftValidatorSetTest.h
test/unittest/utils/: LoggerTest.cpp  LoggerTest.h  Sha256Test.cpp  Sha256Test.h  TimerTest.cpp  TimerTest.h  TimestampTest.cpp  TimestampTest.h
